# kairoi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
docs/: client-protocol.md  compilation.md  configuration.md  index.md  instructions.md  runners.md
src/: cli.rs  configuration.rs  logger.rs  main.rs  sync.rs
src/controller/: mod.rs
src/controller/client/: mod.rs  parser.rs
src/controller/client/request/: job.rs  mod.rs  rule.rs
src/database/: execution.rs  execution_context.rs  framerate.rs  job.rs  mod.rs  rule.rs
src/database/execution/: mod.rs  protocol.rs
src/database/execution_context/: mod.rs
src/database/query/: mod.rs
src/database/query/instruction/: job.rs  mod.rs  rule.rs
src/database/storage/: encoder.rs  job.rs  mod.rs  rule.rs  write_ahead_logger.rs
src/database/storage/persistence/: background.rs  encoder.rs  mod.rs
src/database/storage/persistence/logfile/: encoding.rs  mod.rs
src/database/storage/write_ahead_logger/: mod.rs  parser.rs
src/execution/: job.rs  mod.rs  runner.rs
src/processor/: amqp.rs  mod.rs  protocol.rs  shell.rs
src/processor/runner/: amqp.rs  mod.rs  shell.rs
src/query/: instruction.rs  mod.rs
