[package]
name = "kairoi"
version = "0.1.0"
authors = ["emerick42 <emerick42@pm.me>"]
edition = "2018"
description = "Kairoi is a Dynamic, Accurate and Scalable Time-based Job Scheduler."
readme = "README.md"
repository = "https://github.com/emerick42/kairoi"
license = "MIT"
publish = false

[features]
default = ["runner-shell", "runner-amqp"]

runner-shell = []
runner-amqp = ["amiquip"]

[dependencies]
chrono = { version = "0.4" }
log = { version = "0.4.8" }
nom = { version = "6.2.1" }
simple_logger = { version = "1.6.0" }
uuid = { version = "0.8.1", default-features = false, features = ["v4"] }
crossbeam-channel = { version = "0.5.1" }
# Optional dependencies.
amiquip = { version = "0.3.3", optional = true }
